{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 34,
  "lineage": "81f5fd9d-565b-8049-3893-91c294affbdc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/loadBalancingRules/LBRule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/publicIPAddresses/WA-pip"
              }
            ],
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb",
            "location": "eastus",
            "name": "WA-lb",
            "resource_group_name": "WA-resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.webApp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic1/ipConfigurations/primary",
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic0/ipConfigurations/primary"
            ],
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb",
            "name": "BackEndAddressPool",
            "resource_group_name": "WA-resources"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.webApp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/probes/http-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb",
            "name": "http-running-probe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "WA-resources"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.webApp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/backendAddressPools/BackEndAddressPool",
            "backend_address_pool_ids": [
              "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 8080,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb",
            "name": "LBRule",
            "probe_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/probes/http-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "WA-resources"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_lb_backend_address_pool.example",
            "azurerm_lb_probe.example",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.webApp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/DB-resources/providers/Microsoft.Network/networkInterfaces/nicDB",
            "internal_domain_name_suffix": "k1wbyrjqsj5exlwuuvdfotqs5c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/DBVnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-31-5B-1F",
            "name": "nicDB",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "DB-resources",
            "virtual_machine_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/DB-resources/providers/Microsoft.Compute/virtualMachines/DB-VM"
          },
          "dependencies": [
            "azurerm_resource_group.DB",
            "azurerm_resource_group.webApp",
            "azurerm_subnet.DB",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webApp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic0",
            "internal_domain_name_suffix": "k1wbyrjqsj5exlwuuvdfotqs5c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/internal"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9B-68-04",
            "name": "WA-nic0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "WA-resources",
            "virtual_machine_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Compute/virtualMachines/WA-vm0"
          },
          "dependencies": [
            "azurerm_resource_group.webApp",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic1",
            "internal_domain_name_suffix": "k1wbyrjqsj5exlwuuvdfotqs5c.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/internal"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-31-5D-B8",
            "name": "WA-nic1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "WA-resources",
            "virtual_machine_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Compute/virtualMachines/WA-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.webApp",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic0/ipConfigurations/primary|/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "primary",
            "network_interface_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic0"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_lb_backend_address_pool.example",
            "azurerm_network_interface.webApp",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.webApp",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic1/ipConfigurations/primary|/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/loadBalancers/WA-lb/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "primary",
            "network_interface_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkInterfaces/WA-nic1"
          },
          "dependencies": [
            "azurerm_lb.example",
            "azurerm_lb_backend_address_pool.example",
            "azurerm_network_interface.webApp",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.webApp",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "DBNsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/DB-resources/providers/Microsoft.Network/networkSecurityGroups/DBNsg",
            "location": "eastus",
            "name": "DBNsg",
            "resource_group_name": "DB-resources",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.DB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkSecurityGroups/webserver",
            "location": "eastus",
            "name": "webserver",
            "resource_group_name": "WA-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "port8080",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.webApp",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/publicIPAddresses/WA-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.76.6",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "WA-pip",
            "resource_group_name": "WA-resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.webApp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.4.0/24",
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/DBVnet",
            "name": "DBVnet",
            "resource_group_name": "WA-resources",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.webApp",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "WA-resources",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.webApp",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/DBVnet",
            "network_security_group_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/DB-resources/providers/Microsoft.Network/networkSecurityGroups/DBNsg",
            "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/DBVnet"
          },
          "dependencies": [
            "azurerm_network_security_group.DBNsg",
            "azurerm_resource_group.DB",
            "azurerm_resource_group.webApp",
            "azurerm_subnet.DB",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/internal",
            "network_security_group_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkSecurityGroups/webserver",
            "subnet_id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/internal"
          },
          "dependencies": [
            "azurerm_network_security_group.webserver",
            "azurerm_resource_group.webApp",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "451cec56-9230-4b7e-aed4-a546574e12fa",
            "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "eastus",
            "name": "vnet",
            "resource_group_name": "WA-resources",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/internal",
                "name": "internal",
                "security_group": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/networkSecurityGroups/webserver"
              },
              {
                "address_prefix": "10.0.3.0/26",
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/WA-resources/providers/Microsoft.Network/virtualNetworks/vnet/subnets/DBVnet",
                "name": "DBVnet",
                "security_group": "/subscriptions/f0110c13-3ab8-444d-a8c4-98838e3c89df/resourceGroups/DB-resources/providers/Microsoft.Network/networkSecurityGroups/DBNsg"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.webApp"
          ]
        }
      ]
    }
  ]
}